# mock-interview

./: .env  .env.local.example  .gitignore  package-lock.json  package.json
.claude/: settings.local.json
.superpowers/brainstorm/499-1775291987/content/: approaches.html  architecture.html  data-and-pages.html  mockup-dashboard.html  mockup-history-settings.html  mockup-interview-room.html  mockup-interview-setup.html  (+6 more)
agent/: .env.example  .gitignore  config.py  interview_agent.py  main.py  prompts.py  pyproject.toml  state_machine.py  transcript_store.py
agent/tests/: test_prompts.py  test_state_machine.py  test_transcript_store.py
docs/: deployment-and-profitability-analysis.md
docs/superpowers/plans/: 2026-04-04-mock-interview-mvp.md
docs/superpowers/specs/: 2026-04-04-mock-interview-app-design.md
prisma/: schema.prisma
src/app/: layout.tsx  page.tsx
src/app/(app)/: layout.tsx
src/components/: providers.tsx
src/components/dashboard/: quick-start.tsx  recent-interviews.tsx
src/components/history/: interview-list.tsx
src/components/interview/: audio-visualizer.tsx  interview-room.tsx  interview-setup-form.tsx  interview-timer.tsx  transcript-panel.tsx
src/components/layout/: app-sidebar.tsx  header.tsx
src/components/report/: question-scores.tsx  report-summary.tsx  strengths-weaknesses.tsx
src/lib/: interview-config.ts  livekit.ts  llm-providers.ts  report-generator.ts  trpc-client.ts
src/lib/prompts/: evaluation.ts
src/server/: auth.ts  db.ts  trpc.ts
src/server/api/: root.ts
src/types/: interview.ts  next-auth.d.ts
(+16 files in other folders)
